[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Sprite-0001.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -251.0
margin_right = -164.0
margin_bottom = -251.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 197.0
margin_top = 284.0
margin_right = 300.0
margin_bottom = 308.0

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
margin_left = 219.0
margin_top = 265.0
margin_right = 302.0
margin_bottom = 280.0
text = "MÃ¦ngde"

[node name="Label2" type="Label" parent="Control"]
margin_left = 416.0
margin_top = 266.0
margin_right = 499.0
margin_bottom = 281.0
text = "Pris"

[node name="Label3" type="Label" parent="Control"]
margin_left = 388.0
margin_top = 394.0
margin_right = 471.0
margin_bottom = 409.0
text = "10% off pris"

[node name="Sprite2" type="Sprite" parent="Control"]
position = Vector2( 360, 426 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Sprite3" type="Sprite" parent="Control"]
position = Vector2( 430, 426 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 4, 0, 4, 4 )

[node name="Sprite4" type="Sprite" parent="Control"]
position = Vector2( 500, 426 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 0, 4, 4 )

[node name="Sprite5" type="Sprite" parent="Control"]
position = Vector2( 360, 294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Sprite6" type="Sprite" parent="Control"]
position = Vector2( 430, 294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 4, 0, 4, 4 )

[node name="Sprite7" type="Sprite" parent="Control"]
position = Vector2( 500, 294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 0, 4, 4 )

[node name="Priser" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PrisGold" type="Label" parent="Priser"]
margin_left = 372.0
margin_top = 285.0
margin_right = 412.0
margin_bottom = 304.0

[node name="PrisSilver" type="Label" parent="Priser"]
margin_left = 440.0
margin_top = 285.0
margin_right = 480.0
margin_bottom = 304.0

[node name="PrisCopper" type="Label" parent="Priser"]
margin_left = 513.0
margin_top = 286.0
margin_right = 553.0
margin_bottom = 305.0

[node name="Pris10Gold" type="Label" parent="Priser"]
margin_left = 373.0
margin_top = 416.0
margin_right = 413.0
margin_bottom = 435.0

[node name="Pris10Silver" type="Label" parent="Priser"]
margin_left = 441.0
margin_top = 416.0
margin_right = 481.0
margin_bottom = 435.0

[node name="Pris10Copper" type="Label" parent="Priser"]
margin_left = 514.0
margin_top = 417.0
margin_right = 554.0
margin_bottom = 436.0

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
